# lims

./: LICENSE  README.md
components/api/: Dockerfile  entrypoint.sh  package-lock.json  package.json
components/api/src/: index.html  index.js  server.js
components/api/src/routes/: clients.js  csp.js  links.js  policies.js  site.js
components/api/src/services/: clients.service.js  csp.service.js  links.service.js  policies.service.js  site.service.js
components/api/src/utils/: auth.js
components/base_node/: Dockerfile  build.sh
components/db-setup/: Dockerfile  entrypoint.sh  main.js  package.json  sample-domains_N32QW_42_200.csv
components/proxy-mitm/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
components/proxy-mitm/src/: load_mitm.py  save_har.py  sw_injector.py
components/service-worker/: lms-worker.js  register-sw.js
components/shared/configs/: .secrets.env  config.js
components/shared/database_js/: dbiface.js  elastic_settings.js  model_utils.js  models.js
components/shared/utils_js/: pm2_utils.js  pptr_utils.js  queue_utils.js  utils.js  verify_utils.js  workers.js
components/verifier/: Dockerfile  entrypoint.sh  package-lock.json  package.json
components/verifier/src/: policy_blocks.js  sicilian.py  start_verify_worker.js  verifier.js  worker.js
components/verifier/src/headless-chrome-crawler/: package-lock.json  package.json
deploy/: docker-compose.elk.yml  docker-compose.eval.yml  docker-compose.lms-debug.yml  docker-compose.lms.yml  docker-compose.proxy.yml  docker-compose.yml
(+2 files in other folders)
